Fix alignment of villainy half cards

--- a/src/App.scss
+++ b/src/App.scss
@@ -200,7 +200,7 @@
 }
 
 .adjust-villain-frame-up {
-    top: -.3%;
+    transform: scale(1.007);
 }
 
 $text-shadow: rgba(0, 0, 0, .8);
